# ewe

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/docs/: mod.rs  motivation.rs  performance.rs  testing.rs
